A mapping can name a type another annotation processor generates (#861) (#863)
* A mapping can name a type another annotation processor generates (#861)

A @GenerateMapping or @GenerateMerge spec naming a type that another
processor writes in the same compilation was classified in the round that
wrote the type, before it existed. javac hands a processor an error type in
its place, and an error type passes every check classification makes:
isSameType is true for it, and its element reads as a class. A valid spec
over a generated wire was refused as not bean-shaped, and records holding
generated components got an Impl copying one generated type straight into
another, which stopped compiling once the types were written.

WaitingSpecs decides which specs wait each round. A spec waits while
anything its classification reads, as declared in source, is unresolved:
its supertypes and method signatures, and its domain and wire opened
structurally (record components, permitted subtypes, superclass,
interfaces, enclosing types, the types static methods return, member
signatures). Until none joins, a spec naming the domain or wire of a
waiting mapping waits with it, so nesting never resolves against a
registry missing that mapping. A class file naming a type missing from the
classpath is a broken dependency no round repairs, so it contributes names
only. A spec's own Impl never counts as unresolved.

Both processors carry their unprocessed specs across rounds and register
every mapping spec the compilation has met, minus the waiting ones,
through one per-compilation record: MergeProcessor is first invoked only
in a round carrying @GenerateMerge, and with the index off nothing else
carried earlier mappings to it. Neither writes in the last round, which
javac also makes of the round after a refusal. A spec still waiting when
processing ends generates nothing, and javac reports the missing type.
Index entries naming types compiled here are passed over, since those
specs register f